--- a/server/views/detail.liquid
+++ b/server/views/detail.liquid
@@ -9,7 +9,21 @@
   <div class="detail-card">
     <!-- LINKERKOLOM: hoofdfoto -->
     <div class="main-image">
-      <img src="{{ animalID.photos[0].medium | default: '/assets/no-image-available.png' }}" alt="{{ animalID.name }}" />
+      <img 
+      id="mainImage"
+      src="{{ animalID.photos[0].medium | default: '/assets/no-image-available.png' }}" 
+      alt="{{ animalID.name }}" 
+      class="clickable-image"
+      style="view-transition-name: mainImage"
+    />
+    
+    <!-- Lightbox overlay -->
+    <div class="lightbox" id="lightbox">
+      <figure class="lightbox-image" id="lightboxImage">
+        <!-- Afbeelding wordt via JS hierheen verplaatst -->
+      </figure>
+    </div>
+
      {% assign idString = animalID.id | append: "" %}
       {% assign isFavorited = favorites contains idString %}
       <form method="POST" action="/favorite">
