--- a/client/index.css
+++ b/client/index.css
@@ -77,23 +77,53 @@ h2{
 }
 
 
-
-/* view transitions */
-::view-transition-old(animal-image-*) {
-  animation: fadeOut 1s ease;
+@keyframes fade-in {
+  from { opacity: 0;}
+  to { opacity: 1;}
 }
 
-::view-transition-new(animal-image-*) {
-  animation: fadeIn 2s ease;
+@keyframes fade-out {
+  from { opacity: 1;}
+  to { opacity: 0;}
 }
 
-@keyframes fadeOut {
-  from { opacity: 1; }
-  to { opacity: 0; }
+@keyframes slide-up {
+  from { transform: translateY(5rem); }
+  to { transform: translateY(0); }
 }
 
-@keyframes fadeIn {
-  from { opacity: 0; }
-  to { opacity: 1; }
+@keyframes slide-down {
+  from { transform: translateY(0); }
+  to { transform: translateY(5rem); }
+}
+
+::view-transition-new(lightbox) {
+  animation: 300ms ease 50ms both fade-in, 
+             300ms ease 50ms both slide-up; 
+}
+
+::view-transition-old(lightbox) {
+  animation: 300ms ease 50ms both fade-out, 
+             300ms ease 50ms both slide-down; 
+}
+
+.lightbox {
+  display: none;
+  position: fixed;
+  inset: 0;
+  z-index: 999;
+  background-color: rgba(0, 0, 0, 0.8);
+  justify-content: center;
+  align-items: center;
+}
+
+.lightbox-image img {
+  max-width: 90vw;
+  max-height: 80vh;
+  border-radius: 12px;
+}
+
+.show-lightbox {
+  display: flex !important;
 }
 
