fixing the coding

--- a/server/views/favorites.liquid
+++ b/server/views/favorites.liquid
@@ -16,8 +16,7 @@
               <img src="{{ animal.primary_photo_cropped.small }}" alt="{{ animal.name }}"
               >
             {% else %}
-              <img src="/assets/no-image-available.png" alt="No image"
-              >
+              <img src="/assets/no-image-available.png" alt="No image">
             {% endif %}
 
             <h2>{{ animal.name }}</h2>
