--- a/server/views/index.css
+++ b/server/views/index.css
@@ -1,4 +1,12 @@
-/* home page layout */
+/* ⭐️ HOME PAGE ⭐️ */
+
+main {
+  background-image: url('/assets/images/animal-detail-extra.png');
+  background-size: cover ; 
+  background-attachment: fixed;
+}
+
+
 .homepage {
   display: flex;
   flex-direction: column;
@@ -7,36 +15,35 @@
   text-align: center;
   padding-top: 2em;
   gap: 1em;
-}
 
-.homepage p {
-  font-size: 1.2rem;
-  padding: .5em 2em;
-  border-radius: 20px;
-  border: .2em solid var(--color-white);
-  background-color: var(--color-pastel-pink);
+  p{
+    font-size: 1.2rem;
+    padding: .5em 2em;
+    border-radius: 20px;
+    border: .2em solid var(--color-white);
+    background-color: var(--color-pastel-pink);
+  }
 }
-
 
 .layout-animals {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   align-items: center;
-}
 
-.layout-animals li {
-  border-radius: 12px;
-  padding: 1rem;
-  text-align: center;
-  transition: transform 0.2s ease-in-out;
-}
+  img{
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 8px;
+    margin-bottom: .5em;
+  }
 
-.layout-animals img {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-  border-radius: 8px;
-  margin-bottom: .5em;
+  li{
+    border-radius: 12px;
+    padding: 1rem;
+    text-align: center;
+    transition: transform 0.2s ease-in-out;
+  }
 }
 
 /* next en before buttons */
@@ -44,21 +51,22 @@
   display: flex;
   justify-content: space-between;
   margin: 20px;
+
+  a{
+    padding: 10px 25px;
+    border-radius: 12px;
+    text-decoration: none;
+    font-weight: 500;
+    color: var(--color-black);
+    transition: background-color 0.3s ease;
+    box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 0.1);
+    border: .2em solid var(--color-white);
+  }
 }
 
-.next-page a {
-  padding: 10px 25px;
-  border-radius: 12px;
-  text-decoration: none;
-  font-weight: 500;
-  color: var(--color-black);
-  transition: background-color 0.3s ease;
-  box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 0.1);
-}
 
 .next-page a:first-child {
   background-color: var(--color-pastel-blue);
-  border: .2em solid var(--color-white);
 }
 
 .next-page a:first-child:hover {
@@ -67,7 +75,6 @@
 
 .next-page a:last-child {
   background-color: var(--color-pastel-green);
-  border: .2em solid var(--color-white);
 }
 
 .next-page a:last-child:hover {
@@ -76,7 +83,7 @@
 
 
 
-/* favorites buttons */
+/* ⭐️ FAVORITE PAGE ⭐️ */
 
 .favorites {
   display: flex;
@@ -84,22 +91,39 @@
   justify-content: center;
   padding: 2em;
   border-radius: 20px;
+
+  h1{
+    font-size: 2.4rem;
+    margin-bottom: 1.5em;
+    text-align: center;
+  }
+
+  h2{
+    margin: 0.5em;
+    font-size: 1.4rem;
+    color: #4c3d69;
+  }
+
+  p{
+    text-align: center;
+    font-size: 1.2rem;
+    background-color: var(--color-pastel-pink);
+    border: 2px solid var(--color-white);
+    border-radius: 20px;
+    padding: 1em 2em;
+  }
+
+  a{
+    display: inline-block;
+    background-color: var(--color-pastel-pink);
+    color: var(--color-black);
+    border-radius: 10px;
+    text-decoration: none;
+    font-weight: 500;
+    transition: background-color 0.3s ease;
+  }
 }
 
-.favorites h1 {
-  font-size: 2.4rem;
-  margin-bottom: 1.5em;
-  text-align: center;
-}
-
-.favorites p {
-  text-align: center;
-  font-size: 1.2rem;
-  background-color: var(--color-pastel-pink);
-  border: 2px solid var(--color-white);
-  border-radius: 20px;
-  padding: 1em 2em;
-}
 
 
 .favorite-animals {
@@ -111,6 +135,10 @@
   padding: 0;
 }
 
+.favorite-animals a:hover {
+  background-color: #e9decf;
+}
+
 .favorite-animals li {
   background-color: var(--color-white);
   width: 300px;
@@ -119,7 +147,6 @@
   text-align: center;
   border-radius: 12px;
   
-
   &:hover {
     transform: translateY(-5px);
   }
@@ -132,12 +159,6 @@
     margin-top: 0.75rem;
     aspect-ratio: 1 / 1;
   }
-}
-
-.favorite-animals h2 {
-  margin: 0.5em;
-  font-size: 1.4rem;
-  color: #4c3d69;
 }
 
 .options-animals{
@@ -158,20 +179,6 @@
 
 }
 
-.favorite-animals a {
-  display: inline-block;
-  background-color: var(--color-pastel-pink);
-  color: var(--color-black);
-  border-radius: 10px;
-  text-decoration: none;
-  font-weight: 500;
-  transition: background-color 0.3s ease;
-}
-
-.favorite-animals a:hover {
-  background-color: #e9decf;
-}
-
 .delete-btn {
   background-color: var(--color-pastel-orange);
   border: none;
@@ -179,15 +186,13 @@
   cursor: pointer;
   font-size: 1rem;
   transition: background-color 0.3s ease;
-}
 
-.delete-btn:hover {
-  background-color: #f99a9a;
-}
-
+  &:hover {
+    background-color: #f99a9a;
+}}
 
 
-/* detail page */
+/* ⭐️ DETAIL PAGE ⭐️ */
 
 .detail-container {
   padding: 2rem 1rem;
@@ -205,31 +210,29 @@
     border-radius: 20px;
     border: .2em solid var(--color-white);
     background-color: #FDF1F2;
+    text-align: center;
+    font-size: 2.5rem;
+    font-weight: 400;
+    margin-bottom: 2rem;
+  }
+
+  a{
+    display: block;
+    margin-top: 2rem;
+    text-align: center;
+    color: var(--color-black);
+    font-weight: 700;
+    font-size: 1rem;
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
+    }
   }
 }
 
-.detail-container h1 {
-  text-align: center;
-  font-size: 2.5rem;
-  font-weight: 400;
-  margin-bottom: 2rem;
-}
 
-.detail-container a {
-  display: block;
-  margin-top: 2rem;
-  text-align: center;
-  color: var(--color-black);
-  font-weight: 700;
-  font-size: 1rem;
-  text-decoration: none;
-}
-
-.detail-container a:hover {
-  text-decoration: underline;
-}
-
-/* Kaart met hoofdfoto + beschrijving */
+/* ⭐️ card met mainImg ⭐️ */
 .detail-card {
   display: flex;
   flex-direction: row;
@@ -254,30 +257,36 @@
   min-width: 300px;
 }
 
-/* Beschrijving */
+
+
+/* ⭐️ description ⭐️ */
 .description-box {
   background-color: #FDF1F2;
   padding: 1.5rem;
   border-radius: 16px;
   margin-bottom: 2rem;
-}
 
-.description-box h2 {
-  margin-top: 0;
-  font-size: 1.5rem;
-  margin-bottom: 0.75rem;
+  h2{
+    margin-top: 0;
+    font-size: 1.5rem;
+    margin-bottom: 0.75rem;
+  }
 }
 
 .external-link:hover {
   text-decoration: underline;
 }
 
-/* Info-sectie */
+/* ⭐️ info about animal ⭐️ */
 .info {
   margin-bottom: 2rem;
   display: flex;
   flex-direction: row;
   justify-content: center;
+}
+
+.info a:hover {
+  text-decoration: underline;
 }
 
 .info-selections {
@@ -286,71 +295,66 @@
   justify-content: flex-start;
   gap: 1rem;
   margin-top: .2rem;
+
+  p{
+    background-color: #d7eaf4;
+    border-radius: 12px;
+    padding: 0.6rem 1.2rem;
+    font-size: 1rem;
+    margin: 0;
+  }
 }
 
-.info-selections p {
-  background-color: #d7eaf4;
-  border-radius: 12px;
-  padding: 0.6rem 1.2rem;
-  font-size: 1rem;
-  margin: 0;
-}
 
-.info a {
-  color: #0066cc;
-  text-decoration: none;
-}
-
-.info a:hover {
-  text-decoration: underline;
-}
-
-/* Galerij van extra foto's */
+/* ⭐️ Gallery extra images ⭐️ */
 .image-gallery {
   display: flex;
   justify-content: center;
   gap: 1rem;
   margin: 2rem 0;
   flex-wrap: wrap;
-}
 
-.image-gallery img {
-  width: 220px;
+  img{
+    width: 220px;
   border-radius: 20px;
   object-fit: cover;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
   transition: transform 0.3s ease;
+
+  &:hover {
+    transform: scale(1.05);
+  }}
+
 }
 
-.image-gallery img:hover {
-  transform: scale(1.05);
-}
 
-/* Locatie-sectie */
+/* ⭐️ Locatie ⭐️ */
 .location {
   background-color: var(--color-white);
   padding: 1.5rem;
   margin-top: 2rem;
   border-radius: 16px;
   text-align: left;
+
+  h2{
+    margin-bottom: 0.5rem;
+    font-size: 1.25rem;
+  }
+
+  p{
+    margin-bottom: 0.5rem;
+  }
+
+  iframe{
+    margin-top: 1rem;
+    border-radius: 12px;
+    width: 100%;
+  }
 }
 
-.location h2 {
-  margin-bottom: 0.5rem;
-  font-size: 1.25rem;
-}
 
-.location p {
-  margin-bottom: 0.5rem;
-}
 
-.location iframe {
-  margin-top: 1rem;
-  border-radius: 12px;
-  width: 100%;
-}
-
-/* Responsive tweaks */
+/* ⭐️ media queries ⭐️ */
 @media (max-width: 768px) {
   .detail-card {
     flex-direction: column;
@@ -367,14 +371,9 @@
   }
 }
 
-main {
-  background-image: url('/assets/images/animal-detail-extra.png');
-  background-size: cover ; 
-  background-attachment: fixed;
-}
-
 @media (max-width: 1050px){
   main {
     background-image:none
   }
 }
+
