adding comments and making code cleaner

--- a/server/components/card/card.liquid
+++ b/server/components/card/card.liquid
@@ -1,15 +1,16 @@
 <div class="card">
   <ul class="card-layout">
     <li>
+
+    {% comment %} card voor elk dier {% endcomment %}
       <div class="animal-card">
         <img 
           src="{{ animal.primary_photo_cropped.small | default: animal.photos[0].small }}" 
-          alt="{{ animal.name }}"
-        >
+          alt="{{ animal.name }}">
         <h3>{{ animal.name }}</h3>
       </div>
 
-
+      {% comment %} toevoegen aan favorieten {% endcomment %}
       <form method="POST" action="/favorite">
       <input type="hidden" name="animalId" value="{{ animal.id }}">
 
@@ -23,6 +24,8 @@
         {% endif %}
       </button>
     </form>
+
+    
     </li>
   </ul>
 </div>
