--- a/client/index.css
+++ b/client/index.css
@@ -12,6 +12,7 @@
 @import '../server/layouts/base.css';
 @import '../server/views/index.css';
 
+
 /* component styling */
 @import '../server/components/card/card.css';
 
@@ -23,10 +24,8 @@ body {
   margin: 0;
   padding: 0;
   background-color: var(--color-beige-light);
-
   color: var(--color-black);
   font-family: var(--font-secundair);
-
   min-height: 90vh;
 }
 
@@ -43,7 +42,6 @@ a{
   text-decoration: none ;
 }
 
-
 ul, ol{
   list-style: none;
 }
@@ -53,8 +51,7 @@ h2{
   font-size: 2em;
 }
 
-
-
+/* CUSTOM PROPERTIES */
 :root{
   /* main colors */
   --color-beige: #DDD6CE;
@@ -76,7 +73,7 @@ h2{
   --font-third: "Quicksand", sans-serif;
 }
 
-
+/* made with claude: https://claude.ai/public/artifacts/f86c9bba-b32d-4774-ae11-235597e65f33 */
 /* View Transition animations */
 @keyframes fade-in {
   from { opacity: 0; }
