Updating coding map

--- a/client/index.css
+++ b/client/index.css
@@ -4,7 +4,7 @@
 
 /* global styles */
 @import 'reset.css';
-@import 'typography.css';
+/* @import 'typography.css'; */
 
 
 /* server items inladen */
