--- a/server/layouts/base.liquid
+++ b/server/layouts/base.liquid
@@ -9,9 +9,10 @@
     <title>{{ title }}</title>
 
     {% comment %} google fonts {% endcomment %}
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Questrial&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@200..900&display=swap" rel="stylesheet">
+    
 
   {% endblock %}
   {% if NODE_ENV == "development" %}
